# Search_Engine

./: .gitignore  CMakeLists.txt  README.md
Files/: file004.txt
search_engine/: CMakeLists.txt  answers.json  config.json  main.cpp  requests.json  search_engine.h
